static/css/misc.less
/* ==========================================================================
   cfgov-refresh
   misc
   ========================================================================== */


/* topdoc
  name: Jump link
  family: cfgov-misc
  patterns:
    - name: .jump-link
      markup: |
        <a class="jump-link" href="#">
            Default jump link
        </a>
      codenotes:
        - .jump-link
    - name: .jump-link__large (modifier)
      markup: |
        <a class="jump-link jump-link__large" href="#">
            Large jump link
        </a>
      codenotes:
        - .jump-link__large
  tags:
    - cfgov-misc
*/

.jump-link {
    @font-size: 16px;

    display: inline-block;
    position: relative;
    // Right margin gives the absolutely positioned icon somewhere to go without
    // inheriting the bottom border.
    margin-right: 1.5em;
    border-bottom-width: 1px;
    .webfont-medium();
    font-size: unit(@font-size / @base-font-size-px, em);
    .cf-icon-right();

    &__large {
        @font-size: 18px;
        // Right margin gives the absolutely positioned icon somewhere to go without
        // inheriting the bottom border.
        margin-right: 1.5em;
        font-size: unit(@font-size / @base-font-size-px, em);
    }

    &__download {
        .cf-icon-download();
    }

    &:before {
        .cf-icon();
        display: block;
        position: absolute;
        top: 0.25em;
        right: -1.5em;
        padding-left: 0.25em;
        width: 1em;
        border-bottom: none;
    }

    .list__links & {
        margin-top: -1px;
    }

    .u-respond-to-max(599px, {
        display: block;
        padding: unit(10px / @base-font-size-px, em) 1.25em unit(10px / @base-font-size-px, em) 0;
        border: dotted @pacific;
        border-width: 1px 0;
        margin-right: 0;

        &:before {
            margin-top: -0.5em;
            top: 50%;
            right: 0;
            text-align: right;
        }
    });
}


/* topdoc
  name: Micro copy
  family: cfgov-misc
  patterns:
    - name: Standard micro copy
      markup: |
        <p class="micro-copy">
            Lorem ipsum dolor sit amet
        </p>
      codenotes:
        - .micro-copy
    - name: Large micro copy
      markup: |
        <p class="micro-copy micro-copy__large">
            Lorem ipsum dolor sit amet
        </p>
      codenotes:
        - .micro-copy
  tags:
    - cfgov-misc
*/

.micro-copy {
    color: @gray;
    font-size: unit(14px / @base-font-size-px, em);
    .webfont-regular();

    &__large {
        font-size: unit(16px / @base-font-size-px, em);
    }
}


/* topdoc
  name: Short description
  family: cfgov-misc
  patterns:
    - name: Simple styling for short descriptions
      markup: |
        <p class="short-desc">I am short description.</p>
      codenotes:
        - .short-desc
  tags:
    - cfgov-misc
*/

.short-desc {
    .webfont-regular();
}


/* topdoc
  name: Link modifiers
  family: cfgov-misc
  patterns:
    - name: Block link on small screens
      markup: |
        <a class="link__block-on-small">
            On small screens I am a block, on larger screens I am a normal link.
        </a>
      codenotes:
        - .link__block-on-small
  tags:
    - cfgov-misc
*/

.link__block-on-small {
    .webfont-medium();

    .u-respond-to-max(599px, {
        display: block;
        padding: 0.5em 0;
        border-top: 1px dotted @pacific;
        border-bottom: 1px dotted @pacific;
    });
}
/* ... */

